styles/main.css
@import url('https://fonts.googleapis.com/css?family=Lato');

html {
	font-family: sans-serif;
	background-color: rgb(244, 244, 244);
}

body {
	margin: 0;	
}

p {
	line-height: 1.7em;
}

h1 {
	font-weight: 900;
	letter-spacing: 1px;
	font-size: 3em;
	text-align: center;
	-webkit-text-stroke: 2px black;
	color: transparent;
}

h2 {
	font-weight: 900;
	letter-spacing: 1px;
	font-size: 2.5em;
	text-align: center;
	-webkit-text-stroke: 2px black;
	color: transparent;
}

.splash {
	width: 100vw;
	height: 100vh;
	display: inline-block;
	vertical-align: middle;
}

#projects {
	background-color: #d6d6d6;
}

#contact {
	background-color: #d6d6d6;
}

#about {
	display: inline-block;
}

.text {
	padding: 3em 20% 3em;
}

#profile {
	border-radius: 50%;
	height: 170px;
	width: 170px;
	float: right;
	display: inline;
	margin: 10px;
	border: solid black 1px;
}

.headline {
	text-align: center;
	margin-top: 50vh;
}

.navbar {
	text-align: center;
	margin: 0;
	padding: 0;
	width: 100%;
	position: fixed;
	list-style-type: none;
	background-color: rgb(244, 244, 244);
}

.navbar ul {
	padding: 0;
	margin: 0;
}

.navbar li {
	display: inline;
	padding: 0 10% 0;
}

.navbar li:first-child {
	padding-left: 0;
}

.navbar li:last-child {
	padding-right: 0;
}

.navbar a {
	color: black;
	text-decoration: none;
	display: inline-block;
	padding: 20px;
	transition: text-shadow 0.2s ease;
	font-size: 20px;
}

.navbar a:hover {
	text-shadow: 1px 1px 10px black;
}

.list-horizontal{
    padding-left: 0px;
}

.list-horizontal li {
	display: inline-block;
}

.list-horizontal li:before {
	content: '\00a0\2022\00a0\00a0';
	color: #FFF;
	color: rgb(0, 0, 0);
	font-size: 11px;
}

.list-horizontal li:first-child:before {
	content: '';
}

input {
	border-radius: 50px;
	border: none;
	padding: 14px;
	width: 100%;
	font-size: 18px;
	margin: 10px 0px 10px;
	border: solid black 1px;
}

textarea {
	border-radius: 20px;
	border: none;
	padding: 14px;
	width: 100%;
	font-size: 18px;
	margin: 10px 0px 10px;
	height: 100px;
	resize: none;
	border: solid black 1px;
}

button {
	border-radius: 50px;
	border: solid black 1px;
	padding: 14px;
	font-size: 18px;
	background-color: transparent;
	transition: 0.3s ease;
}

button:hover {
	background-color: black;
	color: rgb(244, 244, 244);
}

@media only screen and (max-width: 600px) {
	.splash {

	}

	body {
		margin: 0;
	}

	#profile {
		float: none;
		display: block;
		margin: 0 auto;
	}

	.text {
		padding: 3em 10% 3em;
	}

	.navbar {
		display: none;
	}
}

